--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ tests/test_graphic_engine/__pycache__/bottle.cpython-37.pyc
 IR-Model/statistics.csv
 
 *.csv
+
+tests/retrievedGooglePages/
+
+tests/googleRetrieval/
